@@ -11,4 +11,4 @@ defined('_JEXEC') or die;
 
 require_once dirname(__FILE__).DS.'helper.php';
 
-require JModuleHelper::getLayoutPath('mod_quickicon');
+require JModuleHelper::getLayoutPath('mod_quickicon', $params->get('layout', 'default'));
