@@ -14,4 +14,4 @@ defined('_JEXEC') or die;
 require_once dirname(__FILE__).DS.'helper.php';
 
 $list = modArticlesPopularHelper::getList($params);
-require JModuleHelper::getLayoutPath('mod_articles_popular');
+require JModuleHelper::getLayoutPath('mod_articles_popular', $params->get('layout', 'default'));
