@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<install type="module" version="1.5.0">
+<install
+	type="module"
+	version="1.5.0">
 	<name>Newsflash</name>
 	<author>Joomla! Project</author>
 	<creationDate>July 2006</creationDate>
@@ -10,40 +12,101 @@
 	<version>1.6.0</version>
 	<description>DESCNEWSFLASH</description>
 	<files>
-		<filename module="mod_newsflash">mod_newsflash.php</filename>
+		<filename
+			module="mod_newsflash">mod_newsflash.php</filename>
 	</files>
 	<fields>
-		<field name="catid" type="category" default="0" label="Category" description="A content category" />
-		<field name="layout" type="list" default="random" label="Layout" description="The layout to display the category">
-			<option value="default">Randomly choose one at a time</option>
-			<option value="horiz">Horizontal</option>
-			<option value="vert">Vertical</option>
+		<field
+			name="catid"
+			type="category"
+			default="0"
+			label="Category"
+			description="A content category" />
+		<field
+			name="layout"
+			type="list"
+			default="random"
+			label="Layout"
+			description="The layout to display the category">
+			<option
+				value="default">Randomly choose one at a time</option>
+			<option
+				value="horiz">Horizontal</option>
+			<option
+				value="vert">Vertical</option>
 		</field>
-		<field name="image" type="radio" default="0" label="Show images" description="Display Article images">
-			<option value="1">JYes</option>
-			<option value="0">JNo</option>
+		<field
+			name="image"
+			type="radio"
+			default="0"
+			label="Show images"
+			description="Display Article images">
+			<option
+				value="1">JYes</option>
+			<option
+				value="0">JNo</option>
 		</field>
-		<field name="link_titles" type="list" default="" label="Linked Titles" description="Make the Item titles linkable">
-			<option value="">Use Global</option>
-			<option value="0">JNo</option>
-			<option value="1">JYes</option>
+		<field
+			name="link_titles"
+			type="list"
+			default=""
+			label="Linked Titles"
+			description="Make the Item titles linkable">
+			<option
+				value="">Use Global</option>
+			<option
+				value="0">JNo</option>
+			<option
+				value="1">JYes</option>
 		</field>
-		<field name="showLastSeparator" type="radio" default="1" label="Show last separator" description="Show separator after last article">
-			<option value="0">JNo</option>
-			<option value="1">JYes</option>
+		<field
+			name="showLastSeparator"
+			type="radio"
+			default="1"
+			label="Show last separator"
+			description="Show separator after last article">
+			<option
+				value="0">JNo</option>
+			<option
+				value="1">JYes</option>
 		</field>
-		<field name="readmore" type="radio" default="0" label="Read More" description="Show/Hide the Read More button">
-			<option value="0">Hide</option>
-			<option value="1">Show</option>
+		<field
+			name="readmore"
+			type="radio"
+			default="0"
+			label="Read More"
+			description="Show/Hide the Read More button">
+			<option
+				value="0">Hide</option>
+			<option
+				value="1">Show</option>
 		</field>
-		<field name="item_title" type="list" default="0" label="Article Title" description="Show article title">
-			<option value="0">JNo</option>
-			<option value="1">JYes</option>
+		<field
+			name="item_title"
+			type="list"
+			default="0"
+			label="Article Title"
+			description="Show article title">
+			<option
+				value="0">JNo</option>
+			<option
+				value="1">JYes</option>
 		</field>
-		<field name="items" type="text" default="" label="No. of Items" description="No of items to display" />
+		<field
+			name="items"
+			type="text"
+			default=""
+			label="No. of Items"
+			description="No of items to display" />
 	</fields>
 	<fields
 		group="advanced">
+		<field
+			name="layout"
+			type="modulelayout"
+			label="JField_Alt_Layout_Label"
+			description="JField_Alt_Module_Layout_Desc" />
+
 		<field
 			name="moduleclass_sfx"
 			type="text"
