@@ -24,4 +24,4 @@ if (!count($images)) {
 }
 
 $image = modRandomImageHelper::getRandomImage($params, $images);
-require JModuleHelper::getLayoutPath('mod_random_image');
+require JModuleHelper::getLayoutPath('mod_random_image', $params->get('layout', 'default'));
