@@ -77,6 +77,12 @@
 	<fields
 		group="advanced">
 		<field
+			name="layout"
+			type="modulelayout"
+			label="JField_Alt_Layout_Label"
+			description="JField_Alt_Module_Layout_Desc" />
+
+		<field
 			name="moduleclass_sfx"
 			type="text"
 			default=""
