@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<install type="module" version="1.5.0">
+<install
+	type="module"
+	version="1.5.0">
 	<name>Syndicate</name>
 	<author>Joomla! Project</author>
 	<creationDate>May 2006</creationDate>
@@ -8,19 +10,39 @@
 	<authorEmail>admin@joomla.org</authorEmail>
 	<authorUrl>www.joomla.org</authorUrl>
 	<version>1.6.0</version>
-	<description>Smart Syndication module that creates syndicated feed for the page where the module is displayed</description>
+	<description>Smart Syndication module that creates syndicated feed for the page where the module is displayed
+	</description>
 	<files>
-		<filename module="mod_syndicate">mod_syndicate.php</filename>
+		<filename
+			module="mod_syndicate">mod_syndicate.php</filename>
 	</files>
 	<fields>
-		<field name="text" type="text" default="Feed Entries" label="Text" description="fieldTEXT" />
-		<field name="format" type="list" default="rss" label="Format" description="fieldFEEDFORMAT">
-			<option value="rss">RSS 2.0</option>
-			<option value="atom">Atom 1.0</option>
+		<field
+			name="text"
+			type="text"
+			default="Feed Entries"
+			label="Text"
+			description="fieldTEXT" />
+		<field
+			name="format"
+			type="list"
+			default="rss"
+			label="Format"
+			description="fieldFEEDFORMAT">
+			<option
+				value="rss">RSS 2.0</option>
+			<option
+				value="atom">Atom 1.0</option>
 		</field>
 	</fields>
 	<fields
 		group="advanced">
+		<field
+			name="layout"
+			type="modulelayout"
+			label="JField_Alt_Layout_Label"
+			description="JField_Alt_Module_Layout_Desc" />
+
 		<field
 			name="moduleclass_sfx"
 			type="text"
