@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<install type="module" version="1.0.0">
+<install
+	type="module"
+	version="1.0.0">
 	<name>Wrapper</name>
 	<author>Joomla! Project</author>
 	<creationDate>October 2004</creationDate>
@@ -10,31 +12,86 @@
 	<version>1.0.0</version>
 	<description>This module shows an IFrame window to specified location</description>
 	<files>
-		<filename module="mod_wrapper">mod_wrapper.php</filename>
+		<filename
+			module="mod_wrapper">mod_wrapper.php</filename>
 	</files>
 	<fields>
-		<field name="url" type="text" size="30" default="" label="Url" description="URL TO SITE/FILE YOU WISH TO DISPLAY WITHIN THE IFRAME" />
-		<field type="spacer" />
-		<field name="scrolling" type="radio" default="auto" label="Scroll Bars" description="SHOW/HIDE HORIZONTAL AND VERTICAL SCROLL BARS.">
-			<option value="no">JNo</option>
-			<option value="yes">JYes</option>
-			<option value="auto">Auto</option>
+		<field
+			name="url"
+			type="text"
+			size="30"
+			default=""
+			label="Url"
+			description="URL TO SITE/FILE YOU WISH TO DISPLAY WITHIN THE IFRAME" />
+		<field
+			type="spacer" />
+		<field
+			name="scrolling"
+			type="radio"
+			default="auto"
+			label="Scroll Bars"
+			description="SHOW/HIDE HORIZONTAL AND VERTICAL SCROLL BARS.">
+			<option
+				value="no">JNo</option>
+			<option
+				value="yes">JYes</option>
+			<option
+				value="auto">Auto</option>
 		</field>
-		<field name="width" type="text" size="5" default="100%" label="Width" description="fieldWIDTH" />
-		<field name="height" type="text" size="5" default="200" label="Height" description="HEIGHT OF THE IFRAME WINDOW" />
-		<field name="height_auto" type="radio" default="1" label="Auto Height" description="fieldAUTOHEIGHT">
-			<option value="0">JNo</option>
-			<option value="1">JYes</option>
+		<field
+			name="width"
+			type="text"
+			size="5"
+			default="100%"
+			label="Width"
+			description="fieldWIDTH" />
+		<field
+			name="height"
+			type="text"
+			size="5"
+			default="200"
+			label="Height"
+			description="HEIGHT OF THE IFRAME WINDOW" />
+		<field
+			name="height_auto"
+			type="radio"
+			default="1"
+			label="Auto Height"
+			description="fieldAUTOHEIGHT">
+			<option
+				value="0">JNo</option>
+			<option
+				value="1">JYes</option>
 		</field>
-		<field type="spacer" />
-		<field name="add" type="radio" default="1" label="Auto Add" description="fieldAUTOADD">
-			<option value="0">JNo</option>
-			<option value="1">JYes</option>
+		<field
+			type="spacer" />
+		<field
+			name="add"
+			type="radio"
+			default="1"
+			label="Auto Add"
+			description="fieldAUTOADD">
+			<option
+				value="0">JNo</option>
+			<option
+				value="1">JYes</option>
 		</field>
-		<field name="target" type="text" size="30" default="" label="Target Name" description="Name of the IFrame when used as Target" />
+		<field
+			name="target"
+			type="text"
+			size="30"
+			default=""
+			label="Target Name"
+			description="Name of the IFrame when used as Target" />
 	</fields>
 	<fields
 		group="advanced">
+		<field
+			name="layout"
+			type="modulelayout"
+			label="JField_Alt_Layout_Label"
+			description="JField_Alt_Module_Layout_Desc" />
+
 		<field
 			name="moduleclass_sfx"
 			type="text"
