@@ -32,6 +32,7 @@ $ -> Language fix or change
    - changed menu page selector to list of checkboxes.
    - changed params to fields in module XML files.
    - changed add module page to modal popup.
+   - added layout override selector field to all modules
 
 23-Nov-2009 Ron Severdia
 ^ Added panels on Edit Category screen, new panels added for default params
